FIX: Popup Long Title Fix - Needed to add some whitespace info to stop the extra long title from pushing the rest of the modal down

--- a/IDE/frontend-dev/design/styles/_popup.scss
+++ b/IDE/frontend-dev/design/styles/_popup.scss
@@ -41,6 +41,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     width: 100%;
+    white-space: nowrap;
     &.error {
       color: $accent-red;
     }
